Trying to do search, but it doesn't work without backend part

--- a/src/assets/scss/blocks/related.scss
+++ b/src/assets/scss/blocks/related.scss
@@ -44,10 +44,10 @@
     font-weight: 500;
     color: #F3EBA2;
     
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;  
-    overflow: hidden;
+    // display: -webkit-box;
+    // -webkit-line-clamp: 2;
+    // -webkit-box-orient: vertical;  
+    // overflow: hidden;
 
     a {
         color: inherit;
