--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,12 +41,15 @@
                     <a class="nav-link" href="profile.html">Профиль</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">Выйти</a>
+                    <a class="nav-link" href="index.html">Выйти</a>
                 </li>
             </ul>
         </nav>
-        <form class="search" action="search.html" method="get">
+        <form class="search"  action="search.html">
             <input class="search-input" type="text" placeholder="Поиск по блогу">
+            <button type="submit" class="search-button">
+                <i class="fas fa-search"></i>
+            </button>
         </form>
     </div>
 </header>
