--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -5,7 +5,7 @@
 
     <div class="sidebar-content">
         <div class="profile">
-            <img class="profile-avatar" src="https://placehold.it/100" alt="">
+            <img class="profile-avatar" src="assets/images/avatar1.5.png" alt="">
             <div class="profile-header">
                 <div class="profile-name">Sagura Yura</div>
                 <div class="profile-prof">блог front-end разработчика</div>
