--- a/src/assets/scss/blocks/profile.scss
+++ b/src/assets/scss/blocks/profile.scss
@@ -14,7 +14,8 @@
     margin: 0 auto 20px;
     position: relative;
 
-    border: 2px solid #FFFFFF;
+    // border: 0.5px solid #FFFFFF;
+    // transform: scale(1.2);
     box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.25);
     border-radius: 50%;
 
