--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,5 +1,11 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="assets/css/style.min.css">
+<link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
 
 <!-- Useful meta tags -->
 <meta http-equiv="x-ua-compatible" content="ie=edge">
