add new logos,images and rename header, add signin,signup pages,create share-modal

--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -7,7 +7,7 @@
             </button>
             
             <div class="form-group">
-                <input class="form-control" type="text" placeholder="Ваше имя">
+                <input class="form-control" type="text" placeholder="Ваше ім'я">
                 <span class="form-line"></span>
             </div>
 
@@ -17,12 +17,12 @@
             </div>
 
             <div class="form-group">
-                <input class="form-control" type="text" placeholder="Текст сообщения">
+                <input class="form-control" type="text" placeholder="Текст повідомлення">
                 <span class="form-line"></span>
             </div>
 
             <div class="form-footer">
-                <button class="btn btn--blue btn--rounded btn--sm">Отправить</button>
+                <button class="btn btn--blue btn--rounded btn--sm">Надіслати</button>
                 
             </div>
             
