--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,28 +3,28 @@
         <nav class="nav">
             <ul class="nav-list">
                 <li>
-                    <a class="nav-link" href="index.html">Главная</a>
+                    <a class="nav-link" href="index.html">Головна</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link has-subnav" href="#">Статьи</a>
+                    <a class="nav-link has-subnav" href="#">Статті</a>
 
                     <ul class="subnav">
                         <li>
-                            <a class="subnav-link" href="#">Создание сайтов</a>
+                            <a class="subnav-link" href="#">Створення сайтів</a>
                         </li>
                         <li>
-                            <a class="subnav-link"  href="#">Интернет-маркетинг</a>
+                            <a class="subnav-link"  href="#">Інтернет-маркетинг</a>
                         </li>
                         <li>
-                            <a class="subnav-link"  href="#">Продвижение видео</a>
+                            <a class="subnav-link"  href="#">Просування відео</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a class="nav-link" href="text.html">Обо мне</a>
+                    <a class="nav-link" href="text.html">Про мене</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">Реклама</a>
+                    <a class="nav-link" href="profile.html">Профіль</a>
                 </li>
             </ul>
         </nav>
@@ -38,15 +38,15 @@
         <nav class="nav"> 
             <ul class="nav-list">
                 <li>
-                    <a class="nav-link" href="profile.html">Профиль</a>
+                    <a class="nav-link" href="signup.html">Реєстрація</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="index.html">Выйти</a>
+                    <a class="nav-link" href="signin.html">Увійти</a>
                 </li>
             </ul>
         </nav>
         <form class="search"  action="search.html">
-            <input class="search-input" type="text" placeholder="Поиск по блогу">
+            <input class="search-input" type="text" placeholder="Пошук по блогу">
             <button type="submit" class="search-button">
                 <i class="fas fa-search"></i>
             </button>
