--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -5,33 +5,33 @@
 
     <div class="sidebar-content">
         <div class="profile">
-            <img class="profile-avatar" src="assets/images/avatar1.5.png" alt="">
+            <img class="profile-avatar" src="assets/images/avatar.png" alt="">
             <div class="profile-header">
-                <div class="profile-name">Sagura Yura</div>
-                <div class="profile-prof">блог front-end разработчика</div>
+                <div class="profile-name">Сагура Юрій</div>
+                <div class="profile-prof">блог front-end розробника</div>
             </div>
 
             <ul class="social">
                 <li class="social-item">
-                    <a href="#" target="_blank">
+                    <a href="https://www.instagram.com/zaezyura/" target="_blank">
                         <img src="assets/images/instagram.svg" alt="Sagura Yura instagram">
                     </a>
                 </li>
                 <li class="social-item">
-                    <a href="#" target="_blank">
-                        <img src="assets/images/vk.svg" alt="Sagura Yura vk">
+                    <a href="mailto:zaezyura@gmail.com" target="_blank">
+                        <img src="assets/images/gmail.svg" alt="Sagura Yura gmail">
                     </a>
                 </li>
                 <li class="social-item">
-                    <a href="#" target="_blank">
-                        <img src="assets/images/pinterest.svg" alt="Sagura Yura pinterest">
+                    <a href="https://telegram.me/zaezyura" target="_blank">
+                        <img src="assets/images/telegram.svg" alt="Sagura Yura telegram">
                     </a>
                 </li>
             </ul>
 
             <div class="profile-text">
-                <p>Начинающий Front-end разработчик.
-                    Планирую связать свою жизнь с разработкой веб-сайтов.
+                <p>Початківець Front-end розробки.
+                    Планую пов'язати своє життя з розробкою веб-сайтів.
                 </p>
             </div>
         </div> <!-- /.profile -->
@@ -39,41 +39,41 @@
         <nav class="nav nav--mobile">
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Главная</a>
+                    <a class="nav-link" href="index.html">Головна</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link has-subnav" href="#">Статьи</a>
+                    <a class="nav-link has-subnav" href="#">Статті</a>
 
                     <ul class="subnav">
                         <li>
-                            <a class="subnav-link" href="#">Создание сайтов</a>
+                            <a class="subnav-link" href="#">Створення сайтів</a>
                         </li>
                         <li>
-                            <a class="subnav-link"  href="#">Интернет-маркетинг</a>
+                            <a class="subnav-link"  href="#">Інтернет-маркетинг</a>
                         </li>
                         <li>
-                            <a class="subnav-link"  href="#">Продвижение видео</a>
+                            <a class="subnav-link"  href="#">Просування видео</a>
                         </li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="text.html">Обо мне</a>
+                    <a class="nav-link" href="text.html">Про мне</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Реклама</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="profile.html">Профиль</a>
+                    <a class="nav-link" href="profile.html">Профіль</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Выйти</a>
+                    <a class="nav-link" href="#">Вийти</a>
                 </li>
             </ul>
         </nav>
     </div> <!-- /.sidebar-content -->
 
     <div class="sidebar-footer">
-        <a class="btn  btn--red" href="works.html">Мои работы</a>
-        <button class="btn  btn--blue" type="button" data-modal="contact-modal">Написать мне</button>
+        <a class="btn  btn--red" href="works.html">Мої роботи</a>
+        <button class="btn  btn--blue" type="button" data-modal="contact-modal">Написати мені</button>
     </div>
 </aside>
