--- a/src/partials/share-modal.html
+++ b/src/partials/share-modal.html
@@ -1,4 +1,4 @@
-<div class="modal">
+<div class="modal" id="share-modal">
     <div class="modal-content">
         
             <button class="modal-close" type="button">
