upgrate mobile sidebar

--- a/src/assets/scss/blocks/nav.scss
+++ b/src/assets/scss/blocks/nav.scss
@@ -45,6 +45,11 @@
     }
 }
 
+.nav-item-sign {
+    display: flex;
+    justify-content: space-between;
+}
+
 .nav-link {
     display: block;
     width: 100%;
