--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -60,14 +60,16 @@
                     <a class="nav-link" href="text.html">Про мне</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Реклама</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="profile.html">Профіль</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Вийти</a>
-                </li>
+                <ul class="nav-item-sign">
+                    <li class="nav-item">
+                        <a class="nav-link" href="signup.html">Реєстрація</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="signin.html">Увійти</a>
+                    </li>
+                </ul>
             </ul>
         </nav>
     </div> <!-- /.sidebar-content -->
