--- a/src/assets/scss/blocks/sidebar.scss
+++ b/src/assets/scss/blocks/sidebar.scss
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     height: calc(100vh - 40px);
-    padding-bottom: 45px;
+    padding-bottom: 15px;
     overflow: auto;
 
     top: 40px;
@@ -48,13 +48,19 @@
   padding: 0 20px;
   margin-top: -50px;
 
-  @include breakpoint($tablet-bp) {
-      flex-grow: 1;
-  }
+  // @include breakpoint($tablet-bp) {
+  //     flex-grow: 1;
+  // }
 }
 
 .sidebar-footer {
   display: flex;
   justify-content: space-between;
+  margin-top: 40px;
   padding: 0 20px;
+
+  // @include breakpoint($tablet-bp) {
+  //     // flex-grow: 1;
+  //     justify-content: flex-end;
+  // }
 }
