--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
 
                     <ul class="subnav">
                         <li>
-                            <a class="subnav-link" href="#">Створення сайтів</a>
+                            <a class="subnav-link" href="post1.html">Grid vs Flexbox: що обрати?</a>
                         </li>
                         <li>
                             <a class="subnav-link"  href="#">Інтернет-маркетинг</a>
