--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,15 +13,15 @@
                             <a class="subnav-link" href="post1.html">Grid vs Flexbox: що обрати?</a>
                         </li>
                         <li>
-                            <a class="subnav-link"  href="#">Інтернет-маркетинг</a>
+                            <a class="subnav-link"  href="post2.html">Способи спрощення обробників подій</a>
                         </li>
                         <li>
-                            <a class="subnav-link"  href="#">Просування відео</a>
+                            <a class="subnav-link"  href="post3.html">Як створити форму валідації в HTML5?</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a class="nav-link" href="text.html">Про мене</a>
+                    <a class="nav-link" href="aboutme.html">Про мене</a>
                 </li>
                 <li>
                     <a class="nav-link" href="profile.html">Профіль</a>
