--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -46,18 +46,18 @@
 
                     <ul class="subnav">
                         <li>
-                            <a class="subnav-link" href="#">Створення сайтів</a>
+                            <a class="subnav-link" href="post1.html">Grid vs Flexbox: що обрати?</a>
                         </li>
                         <li>
-                            <a class="subnav-link"  href="#">Інтернет-маркетинг</a>
+                            <a class="subnav-link"  href="post2.html">Способи спрощення обробників подій</a>
                         </li>
                         <li>
-                            <a class="subnav-link"  href="#">Просування видео</a>
+                            <a class="subnav-link"  href="post3.html"> Як створити форму валідації в HTML5?</a>
                         </li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="text.html">Про мне</a>
+                    <a class="nav-link" href="aboutme.html">Про мне</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="profile.html">Профіль</a>
